@@ -1,8 +1,12 @@
 package com.leafy.recommendation.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.leafy.global.type.DifficultyLevel;
+import com.leafy.global.type.GrowthSpeed;
+import com.leafy.global.type.LightLevel;
 import com.leafy.global.type.WaterFrequency;
-import com.leafy.plant.domain.PlantSpecies;
-import com.leafy.plant.repository.PlantSpeciesRepository;
+import com.leafy.plant.dto.PlantDataDto;
 import com.leafy.recommendation.domain.Recommendation;
 import com.leafy.recommendation.dto.RecommendationRequest;
 import com.leafy.recommendation.dto.RecommendationResponseDto;
@@ -10,9 +14,14 @@ import com.leafy.recommendation.repository.RecommendationRepository;
 import com.leafy.user.domain.User;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.GetObjectRequest;
 
+import java.io.InputStream;
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -24,61 +33,92 @@ import java.util.stream.Collectors;
 public class RecommendationService {
 
     private final RecommendationRepository recommendationRepository;
-    private final PlantSpeciesRepository plantSpeciesRepository;
+    private final S3Client s3Client;
+    private final ObjectMapper objectMapper;
 
-    /**
-     * 맞춤 식물 추천 (Hybrid: 설문 + 행동 데이터)
-     */
+    @Value("${aws.s3.bucket-name}")
+    private String bucketName;
+    private static final String S3_KEY = "plants/final_plants.json";
+
     @Transactional
     public List<RecommendationResponseDto> recommendPlants(User user, RecommendationRequest request) {
+        // 1. S3에서 모든 식물 데이터를 실시간으로 로드
+        List<PlantDataDto> allPlants = loadPlantsFromS3();
 
-        // 1. 사용자 추천 프로필 조회 (없으면 생성)
-        Recommendation recommendation = recommendationRepository.findByUser(user)
+        // 2. 사용자 추천 프로필 조회 및 설문 결과 업데이트
+        Recommendation recommendationProfile = recommendationRepository.findByUser(user)
                 .orElseGet(() -> createNewRecommendation(user));
 
-        // 2. 설문 데이터 업데이트 (최신 요구사항 반영)
-        recommendation.updateSurvey(
+        recommendationProfile.updateSurvey(
                 request.getPreferredLight(),
                 request.getPreferredWater(),
                 request.getUserSkill(),
-                request.getPreferredSize(),
+                request.getGrowthSpeed(),
                 request.isHasPet()
         );
 
-        // 3. [핵심] 하이브리드 필터링 로직 결정
-        // 기본적으로 설문값(request)을 따르지만, 배치 분석 결과(analyzed)가 있다면 그것을 우선시함.
-        // 예: 유저는 '자주 주고 싶다(FREQUENT)' 했지만, 실제로는 '게으름(RARE)' -> RARE 식물 추천 (식물 보호)
+        // 3. 하이브리드 필터링을 위한 물주기 값 결정
+        WaterFrequency targetWaterFreq = determineTargetWaterFrequency(recommendationProfile, request.getPreferredWater());
 
-        WaterFrequency targetWaterFreq = request.getPreferredWater(); // 기본: 설문값
+        // 4. 점수 계산 및 랭킹 (Pet Safety는 Hard Filter로 먼저 적용)
+        List<ScoredPlant> scoredPlants = allPlants.stream()
+                .filter(plant -> !request.isHasPet() || !plant.isToxic()) // 반려동물 안전 하드 필터
+                .map(plant -> {
+                    int totalScore = 0;
+                    totalScore += calculateLightScore(plant.getLightLux(), request.getPreferredLight());
+                    totalScore += calculateWaterScore(plant, targetWaterFreq);
+                    totalScore += calculateDifficultyScore(plant.getDisplayDifficulty(), request.getUserSkill());
+                    totalScore += calculateGrowthSpeedScore(plant.getGrowthSpeed(), request.getGrowthSpeed());
 
-        if (recommendation.getAnalyzedWateringPattern() != null) {
-            targetWaterFreq = recommendation.getAnalyzedWateringPattern(); // 보정: 실제 습관
-            log.info("User[{}] Hybrid applied: Survey({}) -> Actual({})",
-                    user.getUserId(), request.getPreferredWater(), targetWaterFreq);
-        }
+                    // --- 실패 특성 페널티 적용 ---
+                    List<String> analyzedFailureTraits = recommendationProfile.getAnalyzedFailureTraits();
+                    if (analyzedFailureTraits != null && !analyzedFailureTraits.isEmpty() && plant.getKeywordTags() != null) {
+                        for (String failureTrait : analyzedFailureTraits) {
+                            if (plant.getKeywordTags().contains(failureTrait)) {
+                                totalScore -= 20; // 페널티 점수 (예: -20점)
+                            }
+                        }
+                    }
+                    totalScore = Math.max(0, totalScore); // 점수가 0 미만으로 내려가지 않도록 보정
 
-        // 4. 식물 도감 검색
-        List<PlantSpecies> plants = plantSpeciesRepository.findRecommendations(
-                request.getPreferredLight(),
-                targetWaterFreq,   // 보정된 물주기 값 사용
-                request.getUserSkill(),
-                request.getPreferredSize(),
-                request.isHasPet()
-        );
-
-        // 5. 결과 변환 및 태그 생성
-        List<RecommendationResponseDto> responseDtos = plants.stream()
-                .map(plant -> mapToDto(plant, recommendation))
+                    return new ScoredPlant(plant, totalScore);
+                })
+                .sorted((p1, p2) -> Integer.compare(p2.getScore(), p1.getScore())) // 점수 내림차순 정렬
+                .limit(10) // 상위 10개만 추천
                 .collect(Collectors.toList());
 
-        // 6. 추천 결과 ID 저장 (나중에 "지난번 추천 목록" 조회 시 사용)
-        List<Long> plantIds = plants.stream().map(PlantSpecies::getSpeciesId).toList();
-        recommendation.updateRecommendations(plantIds);
+        // 5. 추천 결과를 DTO로 변환 (태그 고도화 포함)
+        List<RecommendationResponseDto> responseDtos = scoredPlants.stream()
+                .map(scoredPlant -> mapToResponseDto(scoredPlant, recommendationProfile, request)) // request도 전달
+                .collect(Collectors.toList());
+
+        // 6. 추천 결과 ID를 DB에 저장
+        List<Long> recommendedIds = scoredPlants.stream().map(sp -> sp.getPlant().getId()).toList();
+        recommendationProfile.updateRecommendations(recommendedIds);
 
         return responseDtos;
     }
 
-    // --- 내부 헬퍼 메서드 ---
+    private List<PlantDataDto> loadPlantsFromS3() {
+        try (InputStream inputStream = s3Client.getObject(GetObjectRequest.builder()
+                .bucket(bucketName)
+                .key(S3_KEY)
+                .build())) {
+            return objectMapper.readValue(inputStream, new TypeReference<>() {});
+        } catch (Exception e) {
+            log.error("Failed to load or parse plant data from S3: {}", e.getMessage());
+            throw new RuntimeException("Could not load plant data.", e);
+        }
+    }
+
+    private WaterFrequency determineTargetWaterFrequency(Recommendation rec, WaterFrequency surveyFreq) {
+        if (rec.getAnalyzedWateringPattern() != null) {
+            log.info("User[{}] Hybrid applied: Survey({}) -> Actual({})",
+                    rec.getUser().getUserId(), surveyFreq, rec.getAnalyzedWateringPattern());
+            return rec.getAnalyzedWateringPattern();
+        }
+        return surveyFreq;
+    }
 
     private Recommendation createNewRecommendation(User user) {
         Recommendation newRec = Recommendation.builder()
@@ -87,25 +127,197 @@ public class RecommendationService {
         return recommendationRepository.save(newRec);
     }
 
-    private RecommendationResponseDto mapToDto(PlantSpecies plant, Recommendation rec) {
+    // --- Scoring Helper Methods ---
+    private int calculateLightScore(String plantLight, LightLevel userLight) {
+        if (userLight == null || plantLight == null || plantLight.isEmpty()) return 0; // Default if data is missing or user has no preference
+
+        int score = 0;
+        switch (userLight) {
+            case LOW:
+                if (plantLight.contains("낮은")) score += 25;
+                else if (plantLight.contains("중간")) score += 15;
+                break;
+            case MEDIUM:
+                if (plantLight.contains("중간")) score += 25;
+                else if (plantLight.contains("낮은") || plantLight.contains("높은")) score += 15;
+                break;
+            case HIGH:
+                if (plantLight.contains("높은")) score += 25;
+                else if (plantLight.contains("중간")) score += 15;
+                break;
+        }
+        return score;
+    }
+
+    private int calculateWaterScore(PlantDataDto plant, WaterFrequency userWaterFreq) {
+        if (userWaterFreq == null) return 0;
+
+        int month = LocalDate.now().getMonthValue();
+        int cycle;
+
+        if (month >= 3 && month <= 5) cycle = plant.getWaterSpring();
+        else if (month >= 6 && month <= 8) cycle = plant.getWaterSummer();
+        else if (month >= 9 && month <= 11) cycle = plant.getWaterAutumn();
+        else cycle = plant.getWaterWinter();
+
+        if (cycle == 0) return 0; // If data is missing for the season
+
+        switch (userWaterFreq) {
+            case FREQUENT:
+                if (cycle == 3) return 25;
+                else if (cycle == 7) return 10; // Partial match
+                break;
+            case NORMAL:
+                if (cycle == 7) return 25;
+                else if (cycle == 3 || cycle == 14) return 10; // Partial match
+                break;
+            case INFREQUENT:
+                if (cycle == 14) return 25;
+                else if (cycle == 7) return 10; // Partial match
+                break;
+        }
+        return 0; // No match
+    }
+
+    private int calculateDifficultyScore(String plantDifficulty, DifficultyLevel userSkill) {
+        if (userSkill == null || plantDifficulty == null || plantDifficulty.isEmpty()) return 0;
+
+        int score = 0;
+        switch (userSkill) {
+            case EASY:
+                if (plantDifficulty.contains("초보자")) score += 25;
+                else if (plantDifficulty.contains("경험자") || plantDifficulty.contains("보통")) score += 15;
+                break;
+            case NORMAL:
+                if (plantDifficulty.contains("경험자") || plantDifficulty.contains("보통")) score += 25;
+                else if (plantDifficulty.contains("초보자") || plantDifficulty.contains("전문가")) score += 15;
+                break;
+            case HARD:
+                if (plantDifficulty.contains("전문가")) score += 25;
+                else if (plantDifficulty.contains("경험자") || plantDifficulty.contains("보통")) score += 15;
+                break;
+        }
+        return score;
+    }
+
+    private int calculateGrowthSpeedScore(String plantSpeed, GrowthSpeed userSpeed) {
+        if (userSpeed == null || plantSpeed == null || plantSpeed.isEmpty()) return 0;
+
+        int score = 0;
+        switch (userSpeed) {
+            case SLOW:
+                if (plantSpeed.contains("느림")) score += 25;
+                else if (plantSpeed.contains("보통")) score += 15;
+                break;
+            case NORMAL:
+                if (plantSpeed.contains("보통")) score += 25;
+                else if (plantSpeed.contains("느림") || plantSpeed.contains("빠름")) score += 15;
+                break;
+            case FAST:
+                if (plantSpeed.contains("빠름")) score += 25;
+                else if (plantSpeed.contains("보통")) score += 15;
+                break;
+        }
+        return score;
+    }
+
+    // --- Tagging Helper Method ---
+    // This will be used in mapToResponseDto
+    private String getDifficultyTag(String plantDifficulty) {
+        if (plantDifficulty == null || plantDifficulty.isEmpty()) return "";
+        if (plantDifficulty.contains("초보자")) return "#초보자용";
+        if (plantDifficulty.contains("경험자") || plantDifficulty.contains("보통")) return "#경험자용";
+        if (plantDifficulty.contains("전문가")) return "#전문가용";
+        return "";
+    }
+
+    private RecommendationResponseDto mapToResponseDto(ScoredPlant scoredPlant, Recommendation rec, RecommendationRequest request) {
+        PlantDataDto plant = scoredPlant.getPlant();
         List<String> tags = new ArrayList<>();
 
-        // 태그 생성 로직 (프론트엔드 노출용)
-        tags.add("#" + plant.getDifficultyLevel().name()); // #EASY
-        if (Boolean.TRUE.equals(plant.getIsPetFriendly())) tags.add("#반려동물안전");
+        // 1. Tags based on user preferences and high score contribution (from scoring logic)
+        // Pet Safety (Hard filter, so if it's here and user has pet, it's safe)
+        if (request.isHasPet() && !plant.isToxic()) { // Only add if user has pet AND plant is safe
+            tags.add("#반려동물에게_안전");
+        } else if (!request.isHasPet() && plant.isToxic()){
+            // User doesn't have pet but plant is toxic (no tag needed as it's not a preference match)
+        }
 
-        // 하이브리드 추천인 경우 특별 태그 추가
-        if (rec.getAnalyzedWateringPattern() != null) {
+        // Light
+        if (calculateLightScore(plant.getLightLux(), request.getPreferredLight()) == 25) {
+            tags.add("#선호_햇빛조건_완벽일치");
+        } else if (calculateLightScore(plant.getLightLux(), request.getPreferredLight()) > 0) {
+            tags.add("#선호_햇빛조건_양호");
+        }
+
+        // Water
+        WaterFrequency actualWaterFreq = determineTargetWaterFrequency(rec, request.getPreferredWater());
+        if (calculateWaterScore(plant, actualWaterFreq) == 25) {
+            tags.add("#선호_물주기조건_완벽일치");
+        } else if (calculateWaterScore(plant, actualWaterFreq) > 0) {
+            tags.add("#선호_물주기조건_양호");
+        }
+        if (rec.getAnalyzedWateringPattern() != null) { // If hybrid logic applied
             tags.add("#당신의_물주기습관에_딱!");
         }
 
+        // Difficulty / Skill
+        if (calculateDifficultyScore(plant.getDisplayDifficulty(), request.getUserSkill()) == 25) {
+            tags.add("#선호_난이도_완벽일치");
+        } else if (calculateDifficultyScore(plant.getDisplayDifficulty(), request.getUserSkill()) > 0) {
+            tags.add("#선호_난이도_양호");
+        }
+        // Add basic difficulty tag if not a perfect match, or to clarify
+        String difficultyTag = getDifficultyTag(plant.getDisplayDifficulty());
+        if (!difficultyTag.isEmpty()) {
+            tags.add(difficultyTag);
+        }
+
+        // Growth Speed
+        if (calculateGrowthSpeedScore(plant.getGrowthSpeed(), request.getGrowthSpeed()) == 25) {
+            tags.add("#선호_성장속도_완벽일치");
+        } else if (calculateGrowthSpeedScore(plant.getGrowthSpeed(), request.getGrowthSpeed()) > 0) {
+            tags.add("#선호_성장속도_양호");
+        }
+
+        // 2. Add general plant characteristic tags from keywordTags in JSON
+        if (plant.getKeywordTags() != null) {
+            plant.getKeywordTags().forEach(tag -> {
+                if (!tags.contains(tag)) { // Avoid duplicate tags
+                    tags.add(tag);
+                }
+            });
+        }
+
         return RecommendationResponseDto.builder()
-                .speciesId(plant.getSpeciesId())
+                .speciesId(plant.getId())
                 .koreanName(plant.getKoreanName())
                 .scientificName(plant.getScientificName())
-                .officialImageUrl(plant.getOfficialImageUrl())
+                .officialImageUrl(plant.getImageUrl())
+                .description(plant.getDescription()) // ADDED DESCRIPTION HERE
                 .tags(tags)
-                .matchScore(100) // 현재는 단순 필터링이므로 100점 고정 (추후 정교화 가능)
+                .matchScore(scoredPlant.getScore())
                 .build();
+    }
+
+    /**
+     * 추천 점수를 계산하기 위한 내부 래퍼 클래스
+     */
+    private static class ScoredPlant {
+        private final PlantDataDto plant;
+        private final int score;
+
+        public ScoredPlant(PlantDataDto plant, int score) {
+            this.plant = plant;
+            this.score = score;
+        }
+
+        public PlantDataDto getPlant() {
+            return plant;
+        }
+
+        public int getScore() {
+            return score;
+        }
     }
 }
